# schnaps

./: README.md
Applications/SCHNAPS-Learning/Osteoporose/: Etat_Methode_Depistage.xml  Etat_Methode_Prevention.xml  Recompense.xml  Recompense_Compromis.xml  Recompense_Compromis_Alpha.xml  Recompense_Compromis_CE.xml  Recompense_Methode_Depistage_Compromis.xml  Recompense_Methode_Depistage_MinFrac.xml  Recompense_Methode_Prevention_Compromis.xml  Recompense_Methode_Prevention_MinFrac.xml  Recompense_MinCout.xml  parameters.xml  parameters_pop_eval.xml  sensanalysis.xml
Applications/SCHNAPS-Learning/PierresPrecieuses/: Etat.xml  Recompense.xml  parameters.xml
Applications/SCHNAPS-Learning/RetinopathieDiabetique/: Etat_Age_Depart.xml  Etat_Age_Fin.xml  Etat_Ophtalmologiste_Intervalle.xml  Etat_Ophtalmologiste_Sensibilite.xml  Etat_Optometriste_Intervalle.xml  Etat_Optometriste_Specificite.xml  Recompense.xml  Recompense_Compromis.xml  Recompense_MinAnneesAveugle.xml  parameters.xml  parameters_v2.xml  sensanalysis.xml
Applications/SCHNAPS/Osteoporose/: parameters.xml
Applications/SCHNAPS/Osteoporose_10cohortes/: parameters.xml  parameters_0.xml  parameters_1.xml  parameters_14.xml  parameters_16.xml  parameters_18.xml  parameters_44.xml  parameters_45.xml  parameters_5.xml  parameters_64.xml  parameters_8.xml  parameters_85.xml  parameters_87.xml
Applications/SCHNAPS/RetinopathieDiabetique/: parameters.xml  parameters_0.xml  parameters_1.xml  parameters_10.xml  parameters_11.xml  parameters_12.xml  parameters_13.xml  parameters_14.xml  parameters_15.xml  parameters_16.xml  parameters_17.xml  parameters_18.xml  parameters_19.xml  parameters_2.xml  parameters_20.xml  parameters_21.xml  parameters_22.xml  parameters_23.xml  parameters_24.xml  parameters_25.xml  parameters_26.xml  parameters_27.xml  parameters_28.xml  parameters_29.xml  parameters_3.xml  parameters_30.xml  (+78 more)
SCHNAPS/: BaseTypes.xsd  CMakeLists.txt  GUI.xsd  PMT.xsd  Readme.txt  Simulator.xsd
SCHNAPS-plugins/Basic/: Basic.xsd  CMakeLists.txt
SCHNAPS-plugins/Basic/src/SCHNAPS-plugins/Basic/: Abs.cpp  Abs.hpp  Add.cpp  Add.hpp  And.cpp  And.hpp  Basic.cpp  Basic.hpp  BranchDynamic.cpp  BranchDynamic.hpp  BranchStatic.cpp  BranchStatic.hpp  Clock.cpp  Clock.hpp  Concatenate.cpp  Concatenate.hpp  Div.cpp  Div.hpp  Exp.cpp  Exp.hpp  IfThenElse.cpp  IfThenElse.hpp  IsBetween.cpp  IsBetween.hpp  IsEqual.cpp  IsEqual.hpp  IsGreater.cpp  IsGreater.hpp  IsGreaterOrEqual.cpp  IsGreaterOrEqual.hpp  IsLess.cpp  IsLess.hpp  IsLessOrEqual.cpp  IsLessOrEqual.hpp  Log.cpp  Log.hpp  Mod.cpp  Mod.hpp  Mult.cpp  Mult.hpp  (+40 more)
SCHNAPS-plugins/Contacts/: CMakeLists.txt
SCHNAPS-plugins/Control/: CMakeLists.txt  Control.xsd
SCHNAPS-plugins/Data/: CMakeLists.txt  Data.xsd
SCHNAPS-plugins/Easier/: CMakeLists.txt
SCHNAPS-plugins/Learning/: CMakeLists.txt  Learning.xsd
SCHNAPS-plugins/Meds/: CMakeLists.txt  Meds.xsd
SCHNAPS-plugins/Operators/: CMakeLists.txt  Operators.xsd
SCHNAPS-plugins/Operators/src/SCHNAPS/Plugins/Operators/: Abs.cpp  Abs.hpp  AbsComplex.cpp  AbsComplex.hpp  Add.cpp  Add.hpp  AddComplex.cpp  AddComplex.hpp  AddVariable.cpp  AddVariable.hpp  And.cpp  And.hpp  AndComplex.cpp  AndComplex.hpp  ConcatComplex.cpp  ConcatComplex.hpp  ConcatVariable.cpp  ConcatVariable.hpp  Concatenate.cpp  Concatenate.hpp  Div.cpp  Div.hpp  DivComplex.cpp  DivComplex.hpp  DivVariable.cpp  DivVariable.hpp  Exp.cpp  Exp.hpp  ExpComplex.cpp  ExpComplex.hpp  IsBetween.cpp  IsBetween.hpp  IsBetweenComplex.cpp  IsBetweenComplex.hpp  IsBetweenVariable.cpp  IsBetweenVariable.hpp  IsEqual.cpp  IsEqual.hpp  IsEqualComplex.cpp  IsEqualComplex.hpp  (+58 more)
SCHNAPS-plugins/Osteoporosis/: CMakeLists.txt  Osteoporosis.xsd
SCHNAPS/CMakeTestCode/: HASHMAP_GNUCXX.cmake.cpp
SCHNAPS/lib/: libschnaps.so.1.0.0
SCHNAPS/src/SCHNAPS/: Core.hpp  SCHNAPS.hpp  Simulation.hpp  Simulator.hpp  config.hpp  config.hpp.in  gzstream.h  macros.hpp  main.cpp
SCHNAPS/src/SCHNAPS/Core/: AbstractAllocT.hpp  Allocator.cpp  Allocator.hpp  AllocatorT.hpp  AnyType.cpp  AnyType.hpp  ArrayT.hpp  AssertException.cpp  AssertException.hpp  Atom.cpp  Atom.hpp  BadCastException.cpp  BadCastException.hpp  Bool.cpp  Bool.hpp  Char.cpp  Char.hpp  Component.cpp  Component.hpp  ContactsGen.cpp  ContactsGen.hpp  Container.cpp  Container.hpp  ContainerT.hpp  Double.cpp  Double.hpp  Exception.cpp  Exception.hpp  ExecutionContext.cpp  ExecutionContext.hpp  Factory.cpp  Factory.hpp  Float.cpp  Float.hpp  HashString.hpp  IOException.cpp  IOException.hpp  Int.cpp  Int.hpp  InternalException.cpp  (+56 more)
SCHNAPS/src/SCHNAPS/Simulation/: BlackBoard.cpp  BlackBoard.hpp  Clock.cpp  Clock.hpp  Demography.cpp  Demography.hpp  Environment.cpp  Environment.hpp  ExecutionContext.cpp  ExecutionContext.hpp  GenProfile.cpp  GenProfile.hpp  GenerationContext.cpp  GenerationContext.hpp  GenerationThread.cpp  GenerationThread.hpp  Generator.cpp  Generator.hpp  Individual.cpp  Individual.hpp  IndividualModel.cpp  IndividualModel.hpp  Population.cpp  Population.hpp  PopulationManager.cpp  PopulationManager.hpp  Process.cpp  Process.hpp  ProcessPushed.cpp  ProcessPushed.hpp  SimulationContext.cpp  SimulationContext.hpp  SimulationThread.cpp  SimulationThread.hpp  SimulationVariables.cpp  SimulationVariables.hpp  Simulator.cpp  Simulator.hpp  State.cpp  State.hpp  (+2 more)
SCHNAPS/src/SCHNAPS/Simulator/: BlackBoard.cpp  BlackBoard.hpp  Clock.cpp  Clock.hpp  Demography.cpp  Demography.hpp  Environment.cpp  Environment.hpp  ExecutionContext.cpp  ExecutionContext.hpp  GenProfile.cpp  GenProfile.hpp  GenerationContext.cpp  GenerationContext.hpp  GenerationThread.cpp  GenerationThread.hpp  Generator.cpp  Generator.hpp  Individual.cpp  Individual.hpp  IndividualModel.cpp  IndividualModel.hpp  Population.cpp  Population.hpp  PopulationManager.cpp  PopulationManager.hpp  Process.cpp  Process.hpp  ProcessPushed.cpp  ProcessPushed.hpp  SimulationContext.cpp  SimulationContext.hpp  SimulationThread.cpp  SimulationThread.hpp  SimulationVariables.cpp  SimulationVariables.hpp  Simulator.cpp  Simulator.hpp  State.cpp  State.hpp  (+2 more)
(+370 files in other folders)
